--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "pg": "^8.8.0",
     "stripe": "^10.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
